adding freshgrade node config parms to application.yml

--- a/server/src/main/resources/handlebars/app.hbs
+++ b/server/src/main/resources/handlebars/app.hbs
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" manifest="cache.manifest">
 <head>
+    <title>Spring MVC Handlebars Demo</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Spring resource handling</title>
@@ -19,7 +20,8 @@
 <body>
 <div class="container">
     <div class="jumbotron">
-        <h1 id="greeting">{insert greeting here}</h1>
+        <h1>App level here.</h1>
+        <h1 id="greeting">less{insert greeting here}</h1>
     </div>
 	<h2>Example of HTML5 <a href="/cache.manifest">AppCache manifest</a></h2>
     <div id="logo"></div>
