--- a/server/src/main/resources/handlebars/less.hbs
+++ b/server/src/main/resources/handlebars/less.hbs
@@ -26,10 +26,11 @@
 <body>
 <div class="container">
     <div class="jumbotron">
-        <h1 id="greeting">{insert greeting here}</h1>
+        <h1 id="greeting">less {insert greeting here}</h1>
     </div>
 	{{#hasProfile "development"}}
-        <h2>In dev mode <a href="{{src "/less/style.less"}}">a LESS stylesheet is used</a> (see HTML source of this page)</h2>
+        <h2>In development mode <a href="{{src "/less/style.less"}}">a LESS stylesheet is used</a> (see HTML source of this page)</h2><br/>
+        <h2>In production mode <a href="{{src "/css/style.css"}}">Here is a transpiled version of the stylesheet</a> (see HTML source of this page)</h2>
 	{{else}}
         <h2>In production mode <a href="{{src "/css/style.css"}}">a transpiled version of that stylesheet is used</a> (see HTML source of this page)</h2>
 	{{/hasProfile}}
